# data_analysis

./: .gitignore
finance/data/data-main/: 10_event_study_data.csv  11_1_eu_maastricht2022.csv  11_2_eu_maastricht2020.csv  11_3_eu_maastricht2015.csv  11_4_asia_maastricht2022.csv  11_malaysian_firm_data.csv  2_1_efrontier_data.csv  2_2_efrontier_data.csv  3_single_factor_data.csv  3_single_factor_data_lasso.csv  3_unctad_fdi_2024.csv  3_unctad_fdi_2025.csv  4_multi_factor_data.csv  5_capm_lasso_data.csv  5_ie_H_O_model.csv  5_nikkei225_data.csv  6_1_fx_swap_data.csv  6_Standard_Trade_Model_China.csv  6_Standard_Trade_Model_India.csv  6_Standard_Trade_Model_Indonesia.csv  6_Standard_Trade_Model_Japan.csv  6_Standard_Trade_Model_Korea.csv  6_Standard_Trade_Model_Malaysia.csv  6_Standard_Trade_Model_Philippines.csv  6_Standard_Trade_Model_Thailand.csv  9_1_currency_data.csv  (+3 more)
finance/jupyter-docker/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requestment.txt  run.sh  setup-prophet-kernel.sh
finance/notebook/: Untitled-2.ipynb  Untitled-3.ipynb  finance_02.ipynb  finance_03.ipynb  finance_04.ipynb  finance_05.ipynb  finance_06.ipynb  stock_02.ipynb  stock_03.ipynb  stock_04.ipynb  stock_05.ipynb  stock_06.ipynb  stock_07.ipynb  stock_08.ipynb  stock_08_02.ipynb  stock_09.ipynb
open_data/data/: fm02_m_1.csv  jgbcm.csv  jgbcm_all.csv  md02_m_1.csv  nme_R031.3169477.20260329112653.01.csv  nme_資金循環_資金過不足_年度.csv
open_data/jupyter-docker/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requestment.txt  run.sh
open_data/notebook/: Untitled-9.ipynb
(+4 files in other folders)
