[project]
name = "open-data-notebook-env"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy",
  "pandas>=2.2,<3",
  "matplotlib",
  "japanize-matplotlib",
  "seaborn",
  "plotly",
  "python-dotenv",
  "requests",
  "lxml",
  "html5lib",
  "xlrd",
  "openpyxl",
  "statsmodels",
  "linearmodels",
  "tqdm",
  "folium",
  "SPARQLWrapper",
  "scipy",
  "scikit-learn",
  "pandas-datareader",
  "PyPDF2",
  "googletrans==3.1.0a0",
  "pdfplumber",
  "PuLP",
  "ipykernel",
  "nbformat>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
